# xfoil-mcp

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: xfoil_tool.py
src/xfoil_mcp/: __init__.py  __main__.py  core.py  fastapi_app.py  models.py  tool.py
src/xfoil_mcp.egg-info/: PKG-INFO
tests/: test_cli.py  test_core.py
