[project]
name = "xfoil-mcp"
version = "0.1.1"
description = "Domain-neutral MCP wrappers for running XFOIL analyses"
authors = [{ name = "XFOIL MCP Maintainers" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20",
    "fastapi>=0.121,<1.0",
    "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "ruff>=0.14",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/Three-Little-Birds/xfoil-mcp"
Repository = "https://github.com/Three-Little-Birds/xfoil-mcp"

[project.scripts]
xfoil-mcp = "xfoil_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
